# labprobe-hub

./: .env.example  .gitignore  APP_V010_PORTMAP_ADAPTATION.md  BACKEND_PROTOCOL_V2.md  CHANGELOG.md  DEPLOY_BACKEND_v0.8.4.md  Dockerfile  FULL_UPDATE_GUIDE.txt  GIT_BACKEND_BRANCH_GUIDE.md  README.md  README_BACKEND_v0.8.4.md  README_DSM_DEPLOY_v078.md  README_DSM_DEPLOY_v079.md  README_IPV6_ROUTER_HUB_UPDATE.md  RELEASE_v0.7.3.md  RELEASE_v0.7.4.md  RELEASE_v0.7.5.md  RELEASE_v0.7.6.md  RELEASE_v0.7.8.md  RELEASE_v0.7.9.md  RELEASE_v0.8.0.md  RELEASE_v0.8.1.md  RELEASE_v0.8.2.md  RELEASE_v0.8.3.md  RELEASE_v0.8.4.md  RELEASE_v0.9.17_build88.md  ROUTER_DATA_SOURCE_HOTFIX.txt  ROUTER_RPC_DEPLOY.md  SIGNING_SETUP.md  build-release.ps1  config.example.yaml  docker-compose.bridge.yml  docker-compose.host.yml  docker-compose.yml  docker.yml  hub.py  hub_entry.py  hub_realtime_ws.py  labprobe_storage.py  requirements.txt  (+21 more)
app/: build.gradle.kts
labrelay/: Cargo.toml  README.md  build.rs  relay.example.json
labrelay/src/: agent.rs  main.rs  runtime.rs
mqtt/: mosquitto.bridge.conf  mosquitto.host.conf
router_browser_service/: Dockerfile  app.py  requirements.txt
scripts/: build_update_bundle.py  compact_hub_db.sh  install_labrelay.sh  labprobe-install.sh  labrelay-agent.init  labrelay.init  labrelay_agent.sh  repair_storage.py  ruijie_labprobe_install.sh  ruijie_push_to_labprobe.sh  ruijie_router_wan6_push.sh  test-webhook.sh  watch_devices.sh
tests/: test_hub_realtime_wakeup.py  test_hub_sync.py  test_router_be72_wire.py  test_router_dashboard.py  test_router_rpc.py  (+10 more)
(+23 files in other folders)
