[package]
name = "labrelay"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "LabProbe lightweight IPv6 TCP reverse proxy for embedded Linux routers"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "fs"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
